--- a/templates/menupage.html
+++ b/templates/menupage.html
@@ -15,6 +15,7 @@
     <!-- For visualisation -->
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="{{ url_for('static',filename='js/jsnetworkx.js') }}"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     
     <title>Graph traversals</title>
 </head>
